<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/reticle"
        android:layout_width="284dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:background="@drawable/scan_frame" />

    <TextView
        android:id="@+id/scanTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:shadowColor="#000000"
        android:shadowRadius="6"
        android:text="@string/scanner_title"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scanHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowRadius="6"
        android:text="@string/scanner_hint"
        android:textColor="#E8DFCF"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/torchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/btn_dark"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/scanner_torch"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gold"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:text="@string/scanner_close"
            android:textAllCaps="false"
            android:textColor="@color/oak_900"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>
